--- a/sdks/python/tox.ini
+++ b/sdks/python/tox.ini
@@ -17,7 +17,8 @@
 
 [tox]
 # new environments will be excluded by default unless explicitly added to envlist.
-envlist = py27,py3,py27-{gcp,cython,lint,lint3},py3-lint,docs
+;envlist = py27,py3,py27-{gcp,cython,lint,lint3},py3-lint,docs
+envlist = py3
 toxworkdir = {toxinidir}/target/.tox
 
 [pycodestyle]
@@ -57,7 +58,7 @@ commands =
 setenv =
   BEAM_EXPERIMENTAL_PY3=1
 modules =
-  apache_beam.coders,apache_beam.tools,apache_beam.utils
+  apache_beam.coders,apache_beam.tools,apache_beam.utils,apache_beam.internal,apache_beam.metrics,apache_beam.portability
 commands =
   python --version
   pip --version
