--- a/sdks/python/container/py3/build.gradle
+++ b/sdks/python/container/py3/build.gradle
@@ -17,59 +17,31 @@
  */
 
 apply plugin: org.apache.beam.gradle.BeamModulePlugin
-applyGoNature()
 applyDockerNature()
 
-
-description = "Apache Beam :: SDKs :: Python :: Container"
-
-// Figure out why the golang plugin does not add a build dependency between projects.
-// Without the line below, we get spurious errors about not being able to resolve
-// "./github.com/apache/beam/sdks/go"
-resolveBuildDependencies.dependsOn ":beam-sdks-go:build"
+description = "Apache Beam :: SDKs :: Python :: Container :: Python 3 Container"
 
 configurations {
   dockerDependency
-  sdkHarnessLauncher
 }
 
 dependencies {
-  golang {
-    // TODO(herohde): use "./" prefix to prevent gogradle use base github path, for now.
-    // TODO(herohde): get the pkg subdirectory only, if possible. We spend mins pulling cmd/beamctl deps.
-    build name: './github.com/apache/beam/sdks/go', dir: project(':beam-sdks-go').projectDir
-    test name: './github.com/apache/beam/sdks/go', dir: project(':beam-sdks-go').projectDir
-  }
-
-  dockerDependency project(path: ":beam-sdks-python", configuration: "distConfig")
+  // Temporary disable for faster iteration on gradle change.
+  // dockerDependency project(path: ":beam-sdks-python", configuration: "distConfig")
   dockerDependency project(path: ":beam-sdks-python-container", configuration: "sdkHarnessLauncher")
 }
 
 task copyDockerfileDependencies(type: Copy) {
   from configurations.dockerDependency
-  from file("./base_image_requirements.txt")
+  from file("../base_image_requirements.txt")
   into "build/target"
   configurations.dockerDependency.stopExecutionIfEmpty()
 }
 
-golang {
-  packagePath = 'github.com/apache/beam/sdks/python/boot'
-  build {
-    // TODO(herohde): build local platform + linux-amd64, if possible.
-    targetPlatform = ['linux-amd64']
-    outputLocation = './build/launcher/${GOOS}_${GOARCH}/boot'
-  }
-}
-
 docker {
-  name containerImageName(name: "python")
+  name containerImageName(name: "python27")
   files "./build/"
 }
 
-artifacts {
-  sdkHarnessLauncher file: file('./build/launcher'), builtBy: build
-}
-
 // Ensure that making the docker image builds any required artifacts
-dockerPrepare.dependsOn build
 dockerPrepare.dependsOn copyDockerfileDependencies
